# wraith-rs

./: .gitignore  Cargo.toml  README.md
examples/: antidebug.rs  basic_info.rs  detect_hooks.rs  find_module.rs  list_modules.rs  manual_map.rs  memory_map.rs  syscall_demo.rs
src/: arch.rs  error.rs  lib.rs  version.rs
src/km/: allocator.rs  device.rs  driver.rs  error.rs  ioctl.rs  irp.rs  memory.rs  mod.rs  process.rs  shared.rs  string.rs  sync.rs
src/km_client/: driver.rs  ioctl.rs  memory.rs  mod.rs  process.rs
src/manipulation/: mod.rs
src/manipulation/antidebug/: heap_flags.rs  mod.rs  peb_flags.rs  thread_hide.rs
src/manipulation/hooks/: detector.rs  integrity.rs  mod.rs  tracker.rs  unhook.rs
src/manipulation/inline_hook/: builder.rs  guard.rs  mod.rs  registry.rs
src/manipulation/inline_hook/arch/: mod.rs  x64.rs  x86.rs
src/manipulation/inline_hook/asm/: decoder.rs  encoder.rs  iced_decoder.rs  iced_relocator.rs  mod.rs
src/manipulation/inline_hook/hook/: chain.rs  eat.rs  hotpatch.rs  iat.rs  inline.rs  mid.rs  mod.rs  veh.rs  vmt.rs
src/manipulation/inline_hook/trampoline/: allocator.rs  generator.rs  mod.rs
src/manipulation/manual_map/: allocator.rs  entry.rs  mapper.rs  mod.rs  parser.rs  relocator.rs  resolver.rs  tls.rs
src/manipulation/remote/: external.rs  handle.rs  inject.rs  mod.rs  modules.rs  process.rs  thread.rs
src/manipulation/spoof/: gadget.rs  mod.rs  spoofed.rs  stack.rs  trampoline.rs
src/manipulation/syscall/: direct.rs  enumerator.rs  indirect.rs  mod.rs  table.rs  wrappers.rs
src/manipulation/unlink/: list_unlink.rs  mod.rs
src/navigation/: memory_regions.rs  mod.rs  module.rs  module_iter.rs  module_query.rs  thread_iter.rs
src/structures/: ldr.rs  list_entry.rs  mod.rs  peb.rs  teb.rs  unicode_string.rs
src/structures/offsets/: mod.rs  win10.rs  win11.rs  win7.rs
src/structures/pe/: data_directory.rs  dos_header.rs  exports.rs  imports.rs  mod.rs  nt_headers.rs  relocations.rs  section_header.rs  tls.rs
src/util/: hash.rs  memory.rs  mod.rs  pattern.rs  simd.rs
