[package]
name = "wraith-rs"
version = "0.1.2"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "Safe abstractions for Windows PEB/TEB manipulation and anti-detection techniques"
repository = "https://github.com/helz-dotcom/wraith-rs"
keywords = ["windows", "security", "peb", "teb", "internals"]
categories = ["os::windows-apis", "development-tools"]

[features]
default = ["navigation", "unlink"]

# layer features
navigation = []
unlink = ["navigation"]
manual-map = ["navigation"]
syscalls = ["navigation"]
hooks = ["syscalls", "manual-map"]
inline-hook = ["hooks", "navigation"]
antidebug = []

# all features
full = ["navigation", "unlink", "manual-map", "syscalls", "hooks", "inline-hook", "antidebug"]

# optional integrations
logging = ["dep:log"]

# development
test-utils = []

[dependencies]
log = { version = "0.4", optional = true }

[dev-dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
    "Win32_System_WindowsProgramming",
] }

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc", "i686-pc-windows-msvc"]
all-features = true

[lib]
name = "wraith"
path = "src/lib.rs"
