[package]
name = "wraith-rs"
version = "0.1.5"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "Safe abstractions for Windows PEB/TEB manipulation and anti-detection techniques"
repository = "https://github.com/helz-dotcom/wraith-rs"
keywords = ["windows", "security", "peb", "teb", "internals"]
categories = ["os::windows-apis", "development-tools"]

[features]
default = ["std", "navigation", "unlink"]

# std/no_std selection
std = []
alloc = []  # for no_std with heap allocation

# layer features
navigation = []
unlink = ["navigation"]
manual-map = ["navigation"]
syscalls = ["navigation"]
spoof = ["syscalls"]
hooks = ["syscalls", "manual-map"]
inline-hook = ["hooks", "dep:iced-x86"]
antidebug = []
remote = ["syscalls"]

# kernel mode features
kernel = ["alloc"]  # kernel driver support (no_std + alloc)
kernel-client = ["std"]  # usermode client for kernel driver communication

# all features (usermode)
full = ["std", "navigation", "unlink", "manual-map", "syscalls", "spoof", "hooks", "inline-hook", "antidebug", "remote"]

# all features including kernel
full-with-kernel = ["full", "kernel-client"]

# optional integrations
logging = ["dep:log"]

# development
test-utils = []

[dependencies]
log = { version = "0.4", optional = true }
iced-x86 = { version = "1.21", optional = true, default-features = false, features = ["no_std", "decoder", "encoder", "block_encoder", "instr_info", "op_code_info"] }

[dev-dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
    "Win32_System_WindowsProgramming",
] }

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc", "i686-pc-windows-msvc"]
all-features = true

[lib]
name = "wraith"
path = "src/lib.rs"
